FIX dimension col-album+gap

--- a/css/syle.css
+++ b/css/syle.css
@@ -363,7 +363,7 @@ button.upgrade{
 
 /******section recently play********/
 .content-song{
-    padding: 0 30px 0 20px;
+    padding: 0 20px;
 }
 
 .recently-played__title{
@@ -375,7 +375,7 @@ button.upgrade{
 }
 
 .col-album{
-    flex-basis: calc( (100% -90px) /6);
+    flex-basis: calc( (100% /6) - (90px /6));
     gap: 20px;
 }
 
@@ -395,12 +395,10 @@ button.upgrade{
     .recently{
         flex-wrap: wrap;
         gap:15px;
-        /*gap:0*/
     }
 
     .col-album{
-        flex-basis: calc( (100% -60px) /4);
-        /*padding-right: 15px;*/
+        flex-basis: calc( (100% /4) - (60px /4))
     }
 }
 /******fine section recently play********/
